<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data_insights"
            android:icon="@drawable/ic_menu_graph"
            android:title="@string/menu_data_insight" />
        <item
            android:id="@+id/nav_tree_species"
            android:icon="@drawable/ic_menu_forest"
            android:title="@string/menu_tree_species" />
        <item
            android:id="@+id/nav_import_data"
            android:icon="@drawable/ic_menu_upload"
            android:title="@string/menu_import_data" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notification"
            />

    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_login"
                android:title="Login" />
        </menu>
    </item>
</menu>