<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.proxiesr_rfr.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_data_insights"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_data_insights"
        android:name="com.example.proxiesr_rfr.ui.trees.TreeSpeciesFragment"
        android:label="@string/menu_data_insight"
        tools:layout="@layout/fragment_trees">
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_data_insights"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_tree_species"
        android:name="com.example.proxiesr_rfr.ui.dataInsight.DataInsightFragment"
        android:label="@string/menu_tree_species"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_tree_species_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_tree_species"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_import_data"
        android:name="com.example.proxiesr_rfr.ui.importData.ImportDataFragment"
        android:label="@string/menu_import_data"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/action_nav_import_data_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_import_data"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.proxiesr_rfr.ui.notif.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_nav_notifications_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_notifications"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>